--- a/character/character.html
+++ b/character/character.html
@@ -1992,6 +1992,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 '효과명중': '状態異常命中',
                 '속도': '速さ',
                 '치료효과': 'HP回復量',
+                '치료': '治療',
                 '추격': '追撃',
                 '효과 저항': '効果耐性',
                 '효과저항': '効果耐性',
@@ -2012,12 +2013,13 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 '패시브' : 'パッシブ',
                 '실드효과' : 'シールド効果',
                 '추가 효과' : '意識奏功',
+                '반격' : '反撃',
                 '받는 대미지 증가': 'ダメージ受け',
                 '수면': '睡眠',
                 '원소 이상': '元素異常',
                 '실드' : 'シールド',
                 '주원' : '呪怨',
-                '지속 대미지' : 'ドット',
+                '지속 대미지' : 'DOT',
                 '화상' : '燃焼',
                 '화염 속성': '火炎',
                 '축복' : '祝福',
@@ -2033,7 +2035,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 '차지' : 'チャージ',
                 '추가 턴' : '追加ターン',
                 '디버프' : 'デバフ',
-                '지속 회복' : 'ドット回復',
+                '지속 회복' : 'DOT回復',
                 '부활' : '復活',
                 '변신' : '変身',
                 '약점 변경' : '弱点変更',
