--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -114,6 +114,7 @@ alternate_urls:
                         <ul>
                             <li>Data Provider : Iant</li>
                             <li>Translation : RedHarv</li>
+                            <li>Translation : kai</li>
                         </ul>
                     </div>
                     <div class="supporter-tier">
