--- a/character/index.html
+++ b/character/index.html
@@ -1118,7 +1118,7 @@ redirect_from:
         // 별칭 매핑
         const nicknameMap = {
             '유이' : 'YUI',
-            '라면' : '카노 슌',
+            '라멘' : '카노 슌',
             '욧샤' : '사카모토 류지',
             '수모코' : '노게 토모코·여름',
             '수토하' : '아라이 모토하·여름',
@@ -1126,7 +1126,13 @@ redirect_from:
             '얼탱': '아시야 마사키',
             '조커': '아마미야 렌',
             '의사' : '키타자토 키라',
+            '와가하이' : '모르가나',
+            '수나미' : '미나미·여름',
+            '수미유' : '미유·여름',
+            '수유' : '미유·여름',
             '그새끼': '아케치 고로',
+            '선생' : '카타야마 쿠미',
+            '에우떼르빼' : '나가오 마나카',
             '화오링' : '리 야오링·사자무',
             '불오링' : '리 야오링·사자무',
             '5리코' : '타네무라 리코·매화',
