--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -39,18 +39,21 @@ alternate_urls:
     <div class="header-container">
         <h1 id="page-title">주요 페르소나</h1>
     </div>
-                <!-- 광고 -->
-    
-                <div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 0px; margin-bottom:0px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
-                    <ins class="adsbygoogle"
-                        style="display:inline-block;width:728px;height:90px"
-                        data-ad-client="ca-pub-5862324369257695"
-                        data-ad-slot="9244892982"></ins>
-                    </div>
-                    <script>
-                        (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
-                    <!---->
+    <!-- 광고 -->
+
+    <div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 0px; margin-bottom:0px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
+        <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-5862324369257695"
+        data-ad-slot="7254578915"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    </div>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <!---->
+
     <!-- Filter section -->
     <div class="filter-section">
         <div class="filter-header">
