--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -39,15 +39,12 @@ alternate_urls:
     <div class="header-container">
         <h1 id="page-title">주요 페르소나</h1>
     </div>
-    <!-- 광고 -->
-
+    <!-- 광고 가로 길게 반응형 -->
     <div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 0px; margin-bottom:0px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
         <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-5862324369257695"
-        data-ad-slot="7254578915"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
+            style="display:inline-block;width:970px;height:90px"
+            data-ad-client="ca-pub-5862324369257695"
+            data-ad-slot="9244892982"></ins>
     </div>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
@@ -1742,7 +1739,7 @@ alternate_urls:
                 el.style.display = "none";
             }
         });
-    }, 2000);  // 광고 로딩 기다렸다가 2초 후 검사
+    }, 1000);  // 광고 로딩 기다렸다가 1초 후 검사
 </script>
 
 
