--- a/apps/wonder-weapon/index.html
+++ b/apps/wonder-weapon/index.html
@@ -39,6 +39,18 @@ alternate_urls:
 
   <div class="separator-line"></div>
 
+    <!-- 광고 -->
+    <div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 24px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <ins class="adsbygoogle"
+        style="display:inline-block;width:970px;height:90px"
+        data-ad-client="ca-pub-5862324369257695"
+        data-ad-slot="9244892982"></ins>
+    </div>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <!---->
+
   <div class="sort-controls">
     <button id="sort-desc" class="sort-button active" type="button" aria-pressed="true">출시 순 ↓</button>
     <button id="sort-asc" class="sort-button" type="button" aria-pressed="false">출시 순 ↑</button>
