--- a/apps/wonder-weapon/index.html
+++ b/apps/wonder-weapon/index.html
@@ -40,7 +40,7 @@ alternate_urls:
   <div class="separator-line"></div>
 
     <!-- 광고 -->
-    <div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 24px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 12px; margin-bottom: 18px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
     <ins class="adsbygoogle"
         style="display:inline-block;width:970px;height:90px"
         data-ad-client="ca-pub-5862324369257695"
