--- a/apps/wonder-weapon/index.html
+++ b/apps/wonder-weapon/index.html
@@ -302,7 +302,7 @@ alternate_urls:
     }) : [];
     baseArr.sort((a, b) => b.order - a.order); // fixed base: latest first
     const groupIndexByKey = {};
-    baseArr.forEach((x, idx) => { groupIndexByKey[x.key] = Math.floor(idx / 4); });
+    baseArr.forEach((x, idx) => { groupIndexByKey[x.key] = Math.floor(idx / 6); }); // 무기 6개마다 광고 1개
 
     function createInlineAd() {
       const wrap = document.createElement('div');
