--- a/apps/revelations/index.html
+++ b/apps/revelations/index.html
@@ -209,17 +209,12 @@ alternate_urls:
     <!-- 광고 -->
   <div class="ads-container responsive-padding">
     <ins class="adsbygoogle"
-        style="display:inline-block;width:300px;height:100px"
+        style="display:block"
+        data-ad-format="horizontal"
+        data-full-width-responsive="true"
         data-ad-client="ca-pub-5862324369257695"
         data-ad-slot="9244892982"></ins>
     </div>
-    <!--    <ins class="adsbygoogle"
-      style="display:block"
-      data-ad-format="fluid"
-      data-ad-layout-key="-gc+3n+7a-ag-4h"
-      data-ad-client="ca-pub-5862324369257695"
-      data-ad-slot="5373524213"></ins>-->
-
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   </div>
     
