--- a/apps/material-calc/index.html
+++ b/apps/material-calc/index.html
@@ -125,14 +125,15 @@ description: P5X 캐릭터 육성 재료 계산기 (레벨/무기/스킬/심상)
         <p>개인 브라우저에 저장되며 인터넷 기록을 모두 삭제할 경우 데이터는 삭제됩니다.</p>
     </div>
 
-    <!-- 광고 -->
+        <!-- 광고 -->
   <div class="ads-container responsive-padding">
     <ins class="adsbygoogle"
-      style="display:block"
-      data-ad-format="fluid"
-      data-ad-layout-key="-gc+3n+7a-ag-4h"
-      data-ad-client="ca-pub-5862324369257695"
-      data-ad-slot="5373524213"></ins>
+        style="display:block"
+        data-ad-format="horizontal"
+        data-full-width-responsive="true"
+        data-ad-client="ca-pub-5862324369257695"
+        data-ad-slot="9244892982"></ins>
+    </div>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   </div>
     
