--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -152,15 +152,14 @@ redirect_from:
             </div>
         </div>
     </div>
-        <!-- 광고 -->
+    <!-- 광고 -->
   <div class="ads-container responsive-padding">
     <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-format="horizontal"
-        data-full-width-responsive="true"
-        data-ad-client="ca-pub-5862324369257695"
-        data-ad-slot="9244892982"></ins>
-    </div>
+      style="display:block"
+      data-ad-format="fluid"
+      data-ad-layout-key="-gc+3n+7a-ag-4h"
+      data-ad-client="ca-pub-5862324369257695"
+      data-ad-slot="5373524213"></ins>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   </div>
     
