--- a/apps/material-calc/index.html
+++ b/apps/material-calc/index.html
@@ -161,6 +161,40 @@ description: P5X 캐릭터 육성 재료 계산기 (레벨/무기/스킬/심상)
         .responsive-padding { margin: 20px 20px 20px 0; padding: 0 0; }
         @media (max-width: 1200px) { .responsive-padding {margin: 20px 0 0px 0; padding: 0; } }
     </style>
+    <script>
+        
+    setTimeout(() => {
+        document.querySelectorAll(".adsbygoogle").forEach(el => { // width가 900 이상인것만만
+            const status = el.getAttribute("data-ad-status");
+            const adslot = el.getAttribute("data-ad-slot");
+            //console.log("google status", status);
+            //console.log("google adslot", adslot);
+            if ((status === "unfilled" || !el.querySelector("iframe")) && el.style.width === "970px") {
+                el.style.display = "none";
+            }
+        });
+    }, 2000);  // 광고 로딩 기다렸다가 2초 후 검사
+
+    setTimeout(() => {
+        document.querySelectorAll(".adsbygoogle").forEach(el => {
+            const status = el.getAttribute("data-ad-status");
+            const adslot = el.getAttribute("data-ad-slot");
+            if ((status === "unfilled" || !el.querySelector("iframe")) && el.style.width === "970px") {
+                el.style.display = "none";
+            }
+        });
+    }, 4000);  // 광고 로딩 기다렸다가 4초 후 검사
+
+    setTimeout(() => {
+        document.querySelectorAll(".adsbygoogle").forEach(el => {
+            const status = el.getAttribute("data-ad-status");
+            const adslot = el.getAttribute("data-ad-slot");
+            if ((status === "unfilled" || !el.querySelector("iframe")) && el.style.width === "970px") {
+                el.style.display = "none";
+            }
+        });
+    }, 6000);  // 광고 로딩 기다렸다가 6초 후 검사
+    </script>
 </div>
 
 
@@ -409,11 +443,12 @@ function updateSEOContent() {
 </script>
 
 <script>
-document.addEventListener('DOMContentLoaded', () => {
-    Navigation.load('material-calc');
-    updateSEOContent();
-    window.MaterialPlanner && window.MaterialPlanner.init();
-});
+    document.addEventListener('DOMContentLoaded', () => {
+        Navigation.load('material-calc');
+        updateSEOContent();
+        window.MaterialPlanner && window.MaterialPlanner.init();
+    });
+
 </script>
 
 
